# data-prototype

./: .editorconfig  .gitattributes  .markdownlint.yaml  .pre-commit-config.yaml  ANIMATION_AUDIT.md  BULK_APPLY_TEST_PLAN.md  CHANGELOG.md  CODEBASE_CLEANUP_SUMMARY.md  CODESTYLE.md  DATA_FLOW_ANALYSIS.md  Dummy Data(Sheet1).csv  FAQ.md  FINDINGS.md  GETTING-STARTED.md  Healthcare Analytics Dashboard Refactoring Strateg.md  IMPLEMENTATION_PHASES.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PLAN.md  POWERSHELL-COMMANDS.md  README.md  REPOSITORY_CLEANUP_PLAN.md  WINDOWS-SETUP.md  amplify.yml  components.json  generate_sample_data.py  next-auth.d.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  render.with-db.yaml  render.yaml  tsconfig.json
.bmad-core/: install-manifest.yaml
.github/: performance-budget.json
.github/workflows/: ci-cd-performance.yml  ci.yml
__tests__/: phi-security.test.ts
__tests__/auth/: auditRoute.test.ts  rbac.test.ts
__tests__/domain/: bulkApply.test.ts  normalize.test.ts
app/: DevTools.tsx  ExampleChart.tsx  globals.css  layout.tsx  middleware.ts  page.tsx  providers.tsx  wdyr.ts
app/app/: page.tsx
app/charts/: page.tsx
app/components/: Sidebar.tsx  (+39 more)
docs/: Deploying Next.js 15.5.0 Healthcare Analytics to AWS Amplify.md  HIPAA-PHI-Handling.md  IMPLEMENTATION_PHASES.md  PHASE3_IMPLEMENTATION_SUMMARY.md  STRUCTURE.md  render-deployment-guide.md
public/: sample-budget.csv  sample-claims.csv  sample-data.csv
sample_data/: README.md
scripts/: build.ps1  cleanup.ps1  dev.ps1  install.ps1  repo-clean.ps1  troubleshoot.ps1
(+165 files in other folders)
