[project]
name = "healthcare-analytics-data-generator"
version = "1.0.0"
description = "Healthcare Analytics Sample Data Generator"
authors = [{name = "Healthcare Analytics", email = "dev@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101"]
"**/tests/*" = ["S101"]

[tool.ruff.isort]
known-first-party = ["healthcare_analytics"]